--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,6 +4,7 @@
 <h5>This is the OAuth Provider application, you should try accessing one of the Consumer applications</h5>
 
 <ul>
-  <li><a href="http://localhost:3001/users/sign_up">Provider Sign Up</a></li>
-  <li><a href="http://localhost:3001/users/sign_in">Provider Sign In</a></li>
+  <li><a href="http://localhost:3001/">Consumer</a></li>
 </ul>
+
+<%= button_to "Sign Out", "http://localhost:3000/users/sign_out", method: :get %>
